# pyBacktest

./: CONTRIBUTING.md  GUI.py  README.md  SECURITY.md  __init__.py  __main__.py  backtest.py  commissions.py  orders.py  pyproject.toml  readme.md  results.py  setup.py  strategy.py  tradeTypes.py  trades.py  types.py  utils.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml
