[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyBacktest"
version = "0.0.75"
description = "A backtesting framework for stock price prediction strategies"
authors = [
    { name = "Ben Bell", email = "slow111poke@gmail.com" }
]
dependencies = [
    "pandas",
    "numpy"
]
long_description = "file: readme.md"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "LGPL-3.0-only" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]

[project.dynamic]
requires-python = true
license = true
classifiers = true
